# sg.webshop

./: .editorconfig  .gitignore  README.md  package.json  pyproject.toml  tsconfig.json  webpack.config.js
resources/public/pwa/: progeek-manifest.json  softgeek-manifest.json
resources/webpack/js/: admin-lte.js  admin.js  bootstrap.js  jquery.js  main.js  tagify.js
resources/webpack/js/tools/: back-to-top.js
resources/webpack/scss/: admin-lte.scss  admin.scss  bootstrap-icons.scss  bootstrap.scss  font-awesome.scss  main.scss  maintenance.scss  pygments.scss
src/webstore/apps/brands/: urls.py
src/webstore/apps/frontpage/: apps.py  urls.py  views.py
src/webstore/apps/siteSettings/: admin.py  apps.py  maintenanceBackend.py  middleware.py  views.py
src/webstore/apps/siteSettings/context_processors/: __init__.py  global_seo.py
src/webstore/apps/siteSettings/forms/: SiteSettingsForm.py  SocialMediaForm.py  __init__.py
src/webstore/apps/siteSettings/markdown/: mntAboutUsDescription.en.md  mntDescription.en.md
src/webstore/apps/siteSettings/migrations/: 0001_initial.py  0002_alter_sitesettings_table.py  0002_alter_sitesettings_unique_together.py  0003_socialmedia.py  0004_alter_socialmedia_sitesettings.py
src/webstore/frontpage/: views.py
src/webstore/templates/: base.html  robots.txt  skeletron.html
src/webstore/templates/inc/: footer.html  meta_basic.html  meta_icons.html  meta_tags.html  meta_twitterCards.html  metatagsJS.html  open_graph.html
src/webstore/webstore/: asgi.py  celery.py  jinja2.py  settings.py  threadlocals.py  urls.py  wsgi.py
src/webstore/webstore/context_processors/: __init__.py  settings.py  template_preloads.py
src/webstore/webstore/middleware/: SetForceLanguageMiddleware.py  ThreadLocalMidleware.py  __init__.py  removewww.py
src/webstore/webstore/settings/: __init__.py
src/webstore/webstore/templatetags/: __init__.py  assets.py  markdown.py  resource_hints.py  static_extras.py
tools/: deploy.sh  project.env  web_server.sh
utils/nginx/errorPages/: README.md  error.html
utils/nginx/errorPages/css/: style.css  style.css.map
utils/nginx/errorPages/js/: app.js
(+29 files in other folders)
