[tool.poetry]
name = "sg-webstore"
version = "0.1.0"
description = "Online webstore developed in Django"
readme = ["README.md"]
authors = [ "SoulRaven <1303303+soulraven@users.noreply.github.com>", ]
license = "GPL-3.0-or-later"
package-mode = false

[tool.poetry.dependencies]
bcrypt = "^4.3.0"
aiosmtpd = "^1.4.6"
tldextract = "^5.3.0"
python = "^3.12"
django = "^5.2.1"  # or whichever version you prefer
django-grappelli = "^4.0.2"
django-import-export = "^4.0.9"
django-extra-settings = "^0.14.0"
django-split-settings = "^1.3.2"
django-environ = "^0.12.0"
django_compressor = "^4.5.1"
django-extensions = "^4.1"
django-crispy-forms = "^2.0"  # Example of a common Django package
django-maintenance-mode = "^0.22.0"
celery = "^5.5.3"
django-celery-email = "^3.0.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.8.1"
mysqlclient = { version = "^2.1", optional = true }  # For MySQL
python-dotenv = "^1.0"  # For environment variables
whitenoise = "^6.4"  # For static files
gunicorn = "^23.0"  # For production WSGI server

[tool.poetry.group.dev.dependencies]
black = "^25.1"
flake8 = "^7.2"
isort = "^6.0"
mypy = "^1.3"
django-debug-toolbar = "^5.2"
pytest = "^8.3"
pytest-django = "^4.5"
factory-boy = "^3.2"
ipython = "^9.2"
python-dotenv = "^1.0"

[tool.poetry.extras]
#postgres = ["psycopg2-binary"]
mysql = ["mysqlclient"]

[tool.poetry.scripts]
manage = "src.webstore.manage:main"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

# Django-specific settings (optional)
[tool.django]
settings_module = "src.webstore.webstore.settings"

# Black configuration (optional)
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# isort configuration (optional)
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
